hello-app/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app
  labels:
    app: hello-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-app
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      containers:
        - name: hello-app
          image: 058264537240.dkr.ecr.eu-central-1.amazonaws.com/hello-app:hash
          ports:
            - containerPort: 8080
